5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4446/executions/1577_1559.log
== TEST (2019-03-26 18:31:34) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora  da historia"
print("Ada Lovelace foi a primeira programadora da historia"???)
-- ERROR:
File "XXXX", line 2
    print("Ada Lovelace foi a primeira programadora da historia"???)
                                                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:31:46) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora  da historia"
print("Ada Lovelace foi a primeira programadora da historia")
-- OUTPUT:
Ada Lovelace foi a primeira programadora da historia
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:31:48) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora  da historia"
print("Ada Lovelace foi a primeira programadora da historia")
-- EXECUTION TIME:
0.178731
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
Ada Lovelace foi a primeira programadora da historia
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:32:41) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora  da historia"
print("Ada Lovelace foi a primeira programadora da historia").upper()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print("Ada Lovelace foi a primeira programadora da historia").upper()
AttributeError: 'NoneType' object has no attribute 'upper'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:32:44) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora  da historia"
print("Ada Lovelace foi a primeira programadora da historia").upper()
-- EXECUTION TIME:
0.211872
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1577/1559/main.py", line 2, in <module>
    print("Ada Lovelace foi a primeira programadora da historia").upper()
AttributeError: 'NoneType' object has no attribute 'upper'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:33:00) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora  da historia"
print("Ada Lovelace foi a primeira programadora da historia") .upper()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print("Ada Lovelace foi a primeira programadora da historia") .upper()
AttributeError: 'NoneType' object has no attribute 'upper'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:33:02) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora  da historia"
print("Ada Lovelace foi a primeira programadora da historia") .upper()
-- EXECUTION TIME:
0.182994
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1577/1559/main.py", line 2, in <module>
    print("Ada Lovelace foi a primeira programadora da historia") .upper()
AttributeError: 'NoneType' object has no attribute 'upper'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:33:26) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora  da historia"
print("Ada Lovelace foi a primeira programadora da historia".upper())
-- OUTPUT:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:33:29) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora  da historia"
print("Ada Lovelace foi a primeira programadora da historia".upper())
-- EXECUTION TIME:
0.287453
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:33:55) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora  da historia"
print("Ada Lovelace foi a primeira programadora da historia".upper())
-- OUTPUT:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:34:05) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora  da historia"
print("Ada Lovelace foi a primeira programadora da historia".upper())
-- EXECUTION TIME:
0.158386
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:35:17) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora  da historia"
print("Ada Lovelace foi a primeira programadora da historia".upper())
-- OUTPUT:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:35:39) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora  da historia"
print("Ada Lovelace foi a primeira programadora da historia".upper())
-- EXECUTION TIME:
0.206247
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:35:40) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora  da historia"
print("Ada Lovelace foi a primeira programadora da historia".upper())
-- OUTPUT:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:36:31) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora  da historia."
print("Ada Lovelace foi a primeira programadora da historia.".upper())
-- OUTPUT:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:36:32) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora  da historia."
print("Ada Lovelace foi a primeira programadora da historia.".upper())
-- EXECUTION TIME:
0.157824
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 23:53:06) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora  da historia."
print("Ada Lovelace foi a primeira programadora da historia.".upper())
-- EXECUTION TIME:
0.157814
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:57:51) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora  da historia."
print("Ada Lovelace foi a primeira programadora da historia.".upper())
-- OUTPUT:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
